force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Auto_Sync_Group_Mappings__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Auto_Sync_Group_Mappings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to automatically move users to the correct Document Cloud groups when their Salesforce user profiles are updated.</description>
    <inlineHelpText>Enable this setting to automatically move users to the correct Document Cloud groups when their Salesforce user profiles are updated.</inlineHelpText>
    <label>Auto-Sync Group Mappings</label>
    <type>Checkbox</type>
</CustomField>