force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Recipient_Delegate_Approver_Role__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Recipient_Delegate_Approver_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recipients marked as delegators may review the document but can&apos;t sign, approve, accept or acknowledge it. They need to forward the document to another user who may take the appropriate action.</description>
    <inlineHelpText>Recipients marked as delegators may review the document but can&apos;t sign, approve, accept or acknowledge it. They need to forward the document to another user who may take the appropriate action.</inlineHelpText>
    <label>Enable Recipient Delegate Approver Role</label>
    <type>Checkbox</type>
</CustomField>