force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Separate_Signer_Identity_Methods__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Separate_Signer_Identity_Methods__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to allow different verification methods (KBA, web identity, password) to be selected for signers internal or external to your Document Cloud account.</description>
    <inlineHelpText>Enable this setting to allow different verification methods (KBA, web identity, password) to be selected for signers internal or external to your Document Cloud account.</inlineHelpText>
    <label>Enable Separate Signer Identity Methods</label>
    <type>Checkbox</type>
</CustomField>